<resources>
    <string name="app_name">Photoball</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_pic">AddPicActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="about_title">About</string>

    <string name="about_description">This app will take images of line
                                    drawings from the device’s camera
                                    and generate a map based on that
                                    picture. Afterwards, a simulator of a
                                    ball bouncing through the
                                    environment will run which shows
                                    that the ball interacts with the
                                    generated environment. There will
                                    be a selection of base images to
                                    choose from.</string>

    <string name="updates_title">Version 1.0.0</string>

    <string name="updates_description">No New Updates Available\n\nYou already have the latest version of PhotoBall</string>

    <string name="setting_colors">Colors</string>
    <string name="setting_color_value">Transparent (Default)</string>
    <string name="setting_background">Background Filter</string>
    <string name="setting_ball">Ball</string>
    <string name="setting_preset">Ball Presets</string>
    <string name="setting_preset_3d">3D Sphere</string>
    <string name="setting_preset_2d">2D Circle</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_sound_on">On</string>
    <string name="setting_sound_off">Off</string>
    <string name="setting_instruction">Show Instructions</string>
    <string name="setting_animation">Animation Details</string>
    <string name="setting_default">Reset to Default</string>
    <string name="setting_default_description">After confirmation,
        your loaded pictures will be erased,
        and the app\'s configuration will be
        set to the default values</string>
    <string name="setting_reset">Reset</string>
    <string name="setting_cancel">Cancel</string>

    <string name="picture_title">testing</string>
    <string name="picture_description">description test</string>

</resources>
